[tool.poetry]
name = "tg"
version = "0.19.0"
description = "Terminal Telegram client"
authors = ["Paul Nameless <reacsdas@gmail.com>"]
license = "Unlicense"
packages = [{ include = "tg"}]
readme = "readme.md"
homepage = "https://github.com/paul-nameless/tg"
repository = "https://github.com/paul-nameless/tg"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.14.0"

[tool.poetry.scripts]
tg = "tg.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
